--- a/_inst/Areas/Identity/Pages/Account/Login.cshtml
+++ b/_inst/Areas/Identity/Pages/Account/Login.cshtml
@@ -17,7 +17,7 @@
     <form form id="account" method="post" class="justify-content-center">
         <div class="form-row justify-content-center">
             <div class="col-sm-3 my-1">
-                <input asp-for="Input.Email" class="form-control form-control-sm" placeholder="Почтовый адресс" />
+                <input asp-for="Input.Email" class="form-control form-control-sm" placeholder="Почта" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="col-sm-3 my-1">
