--- a/_inst/Areas/Identity/Pages/Account/Register.cshtml
+++ b/_inst/Areas/Identity/Pages/Account/Register.cshtml
@@ -19,15 +19,15 @@
     <form asp-route-returnUrl="@Model.ReturnUrl" method="post" class="justify-content-center">
         <div class="form-row justify-content-center">
             <div class="col-sm-2 my-1">
-                <input asp-for="Input.Name" class="form-control form-control-sm" placeholder="Имя" />
+                <input asp-for="Input.Name" class="form-control form-control-sm" placeholder="Введите имя" />
                 <span asp-validation-for="Input.Name" class="text-danger"></span>
             </div>
             <div class="col-sm-2 my-1">
-                <input asp-for="Input.Email" class="form-control form-control-sm" placeholder="Почтовый адресс" />
+                <input asp-for="Input.Email" class="form-control form-control-sm" placeholder="Введите почту" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="col-sm-2 my-1">
-                <input asp-for="Input.Password" class="form-control form-control-sm" placeholder="Пароль" />
+                <input asp-for="Input.Password" class="form-control form-control-sm" placeholder="Введите пароль" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="col-sm-2 my-1">
