--- a/_inst/Areas/Identity/Pages/Account/Register.cshtml
+++ b/_inst/Areas/Identity/Pages/Account/Register.cshtml
@@ -9,7 +9,7 @@
 <style>
     body 
     { 
-        background: url("https://img1.akspic.ru/image/124040-socialnaya_set-instagram-kamera-video-logo-1920x1080.jpg"); 
+        background-color:darkgray; 
         background-size: cover; 
         background-repeat: no-repeat; height: 100%; 
     }
